web115/styles/default.css
body {
    font-family: monospace;
    background-color: #e5c293;
    color: #393E41;
    text-align: center;
    margin: 0 auto;
    min-width: 27em;
    max-width: 159em;
    font-size: 1.2em;
}

main div:first-of-type,
ul#introList {
    text-align: left;
    margin: 2em 12em;
}

nav ul li {
    list-style: none;
}

h1,
h2,
#greeting,
a:link {
    letter-spacing: .08em;
}

h1 {
    margin: 1em auto 0em;
    font-size: 2em;
}

h2 {
    margin: .5em 8em .4em;
    padding: .4em;
    font-family: 'Courier New';
    font-size: 1.3em;
    background-color: #a17751;
    color: #f8b45c;
    text-shadow: .1em .1em .1em #393E41;
    border: .07em #393E41 solid;
    border-radius: 5em;
}

h3 {
    font-size: 1.3em;
}

/*-------------link styles-------------*/
a:link {
    color: #795548;
    text-decoration: none;
}

a:visited {
    color: #795548;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
    text-decoration-color: #393E41;
}

header nav a:hover,
#homeLogo img:hover,
footer a:hover {
    color: #B94527;
    border: solid #B94527;
    text-decoration: none;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

.fizzMenu {
    position: relative;
    display: inline-block;
}

.fizzItems {
    top: 3em;
    display: none;
    position: absolute;
    background-color: rgb(245, 222, 179);
    border-radius: 1em;
}

.fizzMenu:hover .fizzItems {
    display: block;
}

/*-------------End link styles-------------*/

/*-------------header and footer styles-------------*/
header nav a,
#homeLogo img,
footer a {
    border: solid #795548;
    border-radius: 5em;
    background-color: #F8B45C;
}

header nav a {
    width: 9em;
    font-weight: bold;
    font-size: 1em;
    display: inline-block;
    margin: .5em .3em .5em;
    padding: .3em;
}

header p:first-of-type {
    margin-top: 0;
    font-size: 1.3em;
    font-style: italic;
}

#homeLogo {
    width: 5.4em;
    padding: 0;
    vertical-align: -.7em;
    margin-right: 1em;
}

hr {
    margin: 3em 18em;
    border: .15em solid #795548;
    border-radius: 50%;
}

footer {
    margin-bottom: 2em;
}

footer a {
    padding: 0em 2em;
    font-weight: bold;
}

#validation_link_html,
#validation_link_css {
    padding: 0 !important;
    border: none;
    background: none;
}

#validation_link_html img,
#validation_link_css img {
    vertical-align: -.3em;
}

/*-------------End header and footer styles-------------*/
/*-------------introduction styles-------------*/
figcaption.waterfallImg {
    font-style: italic;
    font-size: .9em;
}

/*-------------End introduction styles-------------*/
/*-------------m2 brand styles-------------*/


ul#colorsList {
    padding: 1em;
    display: flex;
}

ul#colorsList li {
    width: 100%;
    margin: .3em;
    font-size: 1.3em;
}

#couriernew {
    font-family: 'Courier New';
}

#monospace {
    font-family: monospace;
    font-size: 1.2em;
}

#colorsList {
    list-style: none;
}

#c-bgcolor {
    width: 7em;
    height: 7em;
    background-color: #E5C293;
    border: .3em solid #393E41;
}

#c-accent1 {
    width: 7em;
    height: 7em;
    background-color: #A17751;
    border: .3em solid #393E41;
}

#c-accent2 {
    width: 7em;
    height: 7em;
    background-color: #b94527;
    border: .3em solid #393E41;
}

#c-titles {
    width: 7em;
    height: 7em;
    background-color: #f8b45c;
    border: .3em solid #393E41;
}

#c-text {
    width: 7em;
    height: 7em;
    background-color: #393E41;
    border: .3em solid #f8b45c;
    color: #f8b45c;
}

/*-------------End m2 brand styles-------------*/

/*-------------fizzbuzz styles-------------*/
fieldset {
    margin-top: 1.5em;
    border: none;
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
}

fieldset p {
    margin-top: 1.5em;
    flex: 1 0 30%;
}

div#loopColumns p:first-child {
    margin: 0;
}

div#loopColumns {
    margin: 2em;
    column-count: 3;
}

p#loopText {
    line-height: 2.5em;
    text-align: center;
}

/*-------------End fizzbuzz styles-------------*/

/*-------------media queries styles-------------*/
@media screen and (max-width:700px) {
    body {

        width: 500px;
    }

    h2 {
        margin: .5em 4em .4em;
    }

    hr {
        margin: 3em 5em;
    }

    ul#colorsList {
        display: flex;
        flex-direction: column;
        width: 90%;
    }

    ul#colorsList li {
        font-size: 1em;
    }

}

@media screen and (max-width:1030px) {
    fieldset p {
        flex: 1 0 50%;
    }

    main div:first-of-type,
    ul#introList {
        margin: 2em 3em;
    }

    #couriernew,
    #monospace {
        margin: 0 1.5em;
    }
}

@media screen and (max-width:1030px) {
    footer nav a {
        line-height: 2em;
    }

    main div:first-of-type,
    ul#introList {
        margin: 2em 6em;
    }
}

@media screen and (min-width:1200px) and (max-width:1920px) {
    fieldset {
        margin: 0 20em;
    }
}

@media screen and (min-width:1921px) and (max-width:4000px) {
    body {
        max-width: 1800px;
    }

    fieldset {
        margin-top: 1.5em;
        margin: 0 20em;
    }
}

/*-------------End media queries styles-------------*/

